--- a/package.json
+++ b/package.json
@@ -1,7 +1,19 @@
 {
   "name": "new-era-components",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.1",
+  "author": "Joaquin Tornello",
+  "license": "ISC",
+  "keywords": [
+    "react",
+    "components",
+    "ui",
+    "ux",
+    "typescript"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/iskewedI/new-era-components.git"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
