--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "new-era-components",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "author": "Joaquin Tornello",
   "license": "ISC",
   "keywords": [
@@ -33,7 +33,8 @@
     "build": "react-scripts build && mv build dist && cp package.json README.md dist",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "clean": "rm -rf build && rm -rf dist"
+    "clean": "rm -rf build && rm -rf dist",
+    "publish": "npm publish ./dist"
   },
   "eslintConfig": {
     "extends": [
