--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
   "name": "new-era-components",
-  "version": "1.1.1",
+  "version": "1.1.4",
   "description": "New era components that carries the UX to the max level!",
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
   "types": "./dist/esm/index.d.ts",
-  "dependencies": {
+  "devDependencies": {
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "^4.8.4"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6"
   },
   "peerDependencies": {
     "react": ">=18.0.21",
